--- a/Web/Bookworm.Web/Views/Quote/All.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/All.cshtml
@@ -5,10 +5,10 @@
     int index = 1;
 }
 
-<div class="col d-flex justify-content-center animate__animated animate__zoomIn">
-    <div id="textCard" class="card col-6 text-center">
+<div class="col d-flex justify-content-center mt-5 mb-4">
+    <div class="card title-card">
         <div class="card-body">
-            <h1 class="display-4">@this.ViewData["Title"] (@Model.Count())</h1>
+            <h3>@this.ViewData["Title"] (@Model.Count())</h3>
         </div>
     </div>
 </div>
