--- a/Web/Bookworm.Web/Views/Quote/ThankYouQuote.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/ThankYouQuote.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="card">
+﻿<div class="card mt-5">
   <div class="card-body">
     <h5 class="card-title">Thank you for contributing to Bookworm!</h5>
     <p class="card-text">When your quote is approved by an administrator you will receive an email. If you haven't confirmed your email follow the below link.</p>
