--- a/Web/Bookworm.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Web/Bookworm.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,86 +5,72 @@
     ViewData["Title"] = "Log in";
 }
 
-<div class="row justify-content-center">
-    <div class="col-xl-10 col-lg-12 col-md-9">
-        <div class="card o-hidden border-0 shadow-lg my-5">
-            <div class="card-body p-0">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <div>
-                            <img src="@Model.LoginPictureUrl" class="img-fluid" style="height:52rem">
-                        </div>
-
+<div class="card login-form border-3 border-black">
+    <div class="row g-0">
+        <div class="col-md-4">
+            <img src="@Model.LoginPictureUrl" class="img-fluid rounded-start img-login" alt="Books Image...">
+        </div>
+        <div class="col-md-8">
+            <div class="card-body">
+                <h5 class="card-title text-center fs-1">Log in to your Account</h5>
+                <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <form id="account" method="post">
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <div class="form-floating">
+                        <input asp-for="Input.UserName" class="form-control" placeholder="username">
+                        <label asp-for="Input.UserName"></label>
+                        <span asp-validation-for="Input.UserName" class="text-danger"></span>
                     </div>
-                    <div class="col-lg-6">
-                        <div class="p-5 align-content-center">
-                            <div class="text-center">
-                                <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
-                            </div>
-                            <form id="account" method="post">
-                                <div asp-validation-summary="All" class="text-danger"></div>
-                                <div class="form-group">
-                                    <label asp-for="Input.UserName"></label>
-                                    <input asp-for="Input.UserName" class="form-control" />
-                                    <span asp-validation-for="Input.UserName" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <label asp-for="Input.Email"></label>
-                                    <input asp-for="Input.Email" class="form-control" />
-                                    <span asp-validation-for="Input.Email" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <label asp-for="Input.Password"></label>
-                                    <input asp-for="Input.Password" class="form-control" />
-                                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                                </div>
-                                <div class="form-group">
-                                    <div class="checkbox">
-                                        <label asp-for="Input.RememberMe">
-                                            <input asp-for="Input.RememberMe" />
-                                            @Html.DisplayNameFor(m => m.Input.RememberMe)
-                                        </label>
-                                    </div>
-                                </div>
+                    <div class="form-floating">
+                        <input type="email" asp-for="Input.Email" class="form-control" placeholder="name@example.com" />
+                        <label asp-for="Input.Email"></label>
+                        <span asp-validation-for="Input.Email" class="text-danger"></span>
+                    </div>
+                    <div class="form-floating">
+                        <input type="password" asp-for="Input.Password" class="form-control" placeholder="Password" />
+                        <label asp-for="Input.Password"></label>
+                        <span asp-validation-for="Input.Password" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <div class="checkbox">
+                            <label asp-for="Input.RememberMe">
+                                <input asp-for="Input.RememberMe" />
+                                @Html.DisplayNameFor(m => m.Input.RememberMe)
+                            </label>
+                        </div>
+                    </div>
+                    <div class="text-center">
+                        <button type="submit" class="btn button">Login</button>
+                    </div>
+                </form>
+                @{
+                    if ((Model.ExternalLogins?.Count ?? 0) != 0)
+                    {
+                        <div class="text-center">
+                            <span>Or use another service to log in:</span>
+                        </div>
+                        <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                            @foreach (var provider in Model.ExternalLogins)
+                            {
                                 <div class="text-center">
-                                    <button type="submit" class="btn button">Login</button>
+                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName<i class="fab fa-facebook"></i></button>
                                 </div>
-
-                                <hr>
-                            </form>
-                            <div class="col-md-12 col-md-offset-2">
-                                <section>
-                                    <p>or use another service to log in</p>
-                                    <hr />
-                                    @{
-                                        if ((Model.ExternalLogins?.Count ?? 0) != 0)
-                                        {
-                                            <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                                                <div>
-                                                    <p>
-                                                        @foreach (var provider in Model.ExternalLogins)
-                                                        {
-                                                            <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                                        }
-                                                    </p>
-                                                </div>
-                                            </form>
-                                        }
-                                    }
-                                </section>
-                            </div>
-                            <hr>
-                            <div class="text-center">
-                                <a id="forgot-password" asp-page="./ForgotPassword">Forgot Password?</a>
-                            </div>
-                            <div class="text-center">
-                                <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                            </div>
-                            <div class="text-center">
-                                <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Resend email confirmation</a>
-                            </div>
-                        </div>
-                    </div>
+                            }
+                        </form>
+                    }
+                }
+                <div class="text-center">
+                    <a class="form-link" asp-page="./ForgotPassword">Forgot Password?</a>
+                </div>
+                <div class="text-center">
+                    <a class="form-link" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                </div>
+                <div class="text-center">
+                    <a class="form-link" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Resend email confirmation</a>
                 </div>
             </div>
         </div>
@@ -92,5 +78,5 @@
 </div>
 
 @section Scripts {
-<partial name="_ValidationScriptsPartial" />
+    <partial name="_ValidationScriptsPartial" />
 }
