--- a/Web/Bookworm.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Web/Bookworm.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -5,7 +5,58 @@
 }
 
 
-<div class="card o-hidden border-0 shadow-lg">
+<div class="card login-form border-3 border-black">
+    <div class="row g-0">
+        <div class="col-md-4">
+            <img src="@Model.RegisterPictureUrl" class="img-fluid rounded-start img-login" alt="Books Image...">
+        </div>
+        <div class="col-md-8">
+            <div class="card-body">
+                <h5 class="card-title text-center fs-1">Create an Account</h5>
+                <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <form asp-route-returnUrl="@Model.ReturnUrl" method="post" enctype="multipart/form-data">
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="Input.UserName"></label>
+                        <input asp-for="Input.UserName" class="form-control" />
+                        <span asp-validation-for="Input.UserName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Input.Email"></label>
+                        <input asp-for="Input.Email" class="form-control" />
+                        <span asp-validation-for="Input.Email" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Input.Password"></label>
+                        <input asp-for="Input.Password" class="form-control" />
+                        <span asp-validation-for="Input.Password" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Input.ConfirmPassword"></label>
+                        <input asp-for="Input.ConfirmPassword" class="form-control" />
+                        <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                    </div>
+                    <div class="form-group text-center">
+                        <button type="submit" class="btn button">Register</button>
+                    </div>
+                </form>
+                <div class="text-center">
+                    <a class="form-link" asp-page="./ForgotPassword">Forgot Password?</a>
+                </div>
+                <div class="text-center">
+                    <a class="form-link" asp-page="./Login">Already have an account? Login!</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+@*<div class="card o-hidden border-0 shadow-lg">
     <div class="card-body p-0">
         <!-- Nested Row within Card Body -->
         <div class="row">
@@ -62,8 +113,8 @@
             </div>
         </div>
     </div>
-</div>
+</div>*@
 
 @section Scripts {
-<partial name="_ValidationScriptsPartial" />
+    <partial name="_ValidationScriptsPartial" />
 }
