--- a/Web/Bookworm.Web/Views/Shared/_AdminLayout.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_AdminLayout.cshtml
@@ -73,8 +73,8 @@
             <div id="content">
 
                 <!-- Topbar -->
-                <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
-                </nav>
+                @*<nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+                </nav>*@
                 <!-- End of Topbar -->
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
@@ -95,7 +95,7 @@
     <footer class="sticky-footer bg-dark" style="color:white">
         <div class="container my-auto">
             <div class="copyright text-center my-auto">
-                <span>Copyright &copy; Your Website @DateTime.UtcNow.Year</span>
+                <span>Copyright &copy; Bookworm @DateTime.UtcNow.Year</span>
             </div>
         </div>
     </footer>
