--- a/Web/Bookworm.Web/wwwroot/css/site.css
+++ b/Web/Bookworm.Web/wwwroot/css/site.css
@@ -1,484 +1,195 @@
-﻿.navbar {
-    overflow: hidden;
-    position: fixed;
-    width: 100%;
-    top: 0;
-    justify-content: space-between;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    font-weight: 700;
-    padding: 1.3rem 1.3rem;
-    background-color: #34495E;
-    transition: 0.4s;
-    z-index: 100;
-    overflow: visible;
+﻿@import url('https://fonts.googleapis.com/css2?family=Bagel+Fat+One&family=Diphylleia&display=swap');
+
+:root {
+    --clr-primary: #34495E;
+    --clr-secondary: #1abc9c;
 }
 
-    .navbar .navbar-brand {
-        font-size: xx-large;
+html, body {
+    height: 100%;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Diphylleia', serif;
+    display: flex;
+    flex-direction: column;
+    padding-top: 4rem;
+}
+
+.navbar {
+    background-color: var(--clr-primary);
+}
+
+    .navbar .nav-item .nav-link {
         color: white;
     }
 
-        .navbar .navbar-brand:hover {
-            color: #1abc9c;
+        .navbar .nav-item .nav-link:hover {
+            color: var(--clr-secondary);
         }
 
-.customCard-body {
-    background-color: #34495E;
+.fa-bars {
     color: white;
 }
-
-.table td {
-    vertical-align: middle;
-}
-
-.favoriteBookHeart {
-    color: red;
-}
-
-.card {
-    max-width: 100%;
-}
-
-    .card .card-body {
-        text-overflow:inherit
-    }
-
-#textCard {
-    border-radius: 20px;
-    border: solid;
-    margin-bottom: 2rem;
-}
-
-addToFavoritesButton {
-    cursor: pointer;
-}
-
-.navbar-nav .nav-item .nav-link:hover {
-    color: #1abc9c;
-}
-
-#dailyDownloadsHyperlink:disabled {
-    pointer-events: none;
-}
-
-.navbar-collapse {
-    margin-left: 30rem;
-}
-
-.form-control {
-    font-size: x-large;
-}
-
-.form-group {
-    margin-top: 2rem;
-}
-
-.bookSection .bookDescription {
-    margin-top: 2rem;
-}
-
-.custom-file {
-    font-size: x-large;
-    margin-bottom: 2rem;
-    margin-top: 2rem;
-}
-
-.form-button {
-    margin-top: 2rem;
-    margin-bottom: 4rem;
-}
-
-.zoom {
-    transition: transform .2s;
-}
-
-    .zoom:hover {
-        transform: scale(1.1);
-    }
 
 .button {
+    background-color: var(--clr-primary);
     color: white;
-    background-color: #1abc9c;
 }
 
-.btnDanger {
+    .button:hover {
+        background-color: #34495E;
+        color: var(--clr-secondary);
+    }
+
+.logout-btn {
+    background-color: var(--clr-secondary);
     color: white;
-    background-color: red;
+    border-radius: 10px
 }
 
-.welcomeSection {
-    margin-bottom: 5rem;
+.img-login {
+    height: 100%;
 }
 
-.textContainer {
-    border: solid #34495E;
-    border-radius: 25px;
-    margin: auto;
-    margin-bottom: 3rem;
+.login-form {
+    margin: 100px;
 }
 
-.blockquote-card .card-header {
-    color: white;
-    background-color: #34495E;
-}
+    .login-form .btn {
+        margin: 15px 0px;
+    }
 
-.blockquote-footer {
-    text-align: right;
-}
+    .login-form .form-control {
+        margin: 15px 0px;
+    }
 
-.quoteContent {
-    font-style: italic;
-}
-
-.container {
-    margin-top: 8rem;
-    margin-bottom: 3rem;
-}
-
-.bookSection .card .card-header {
-    color: white;
-    background-color: #34495E;
-}
-
-.commentHeader {
-    color: white;
-    background-color: #34495E;
-}
-
-.commentCard {
-    border-style: solid;
-    border-color: black;
-}
-
-
-@media(min-width:768px) {
-    /*html: {
-        font-size: 16px
-    }*/
-}
+    .login-form .fa-facebook {
+        color: #658fd7;
+        margin-left: 5px;
+    }
 
 a {
     color: #1abc9c;
 }
 
-    a:hover {
-        color: #15967d;
-    }
-
-.icon {
-    margin-left: 1rem;
-}
-
-.footer {
-    display: grid;
-    height: 4rem;
-    color: white;
-    justify-content: center;
-    background-color: #34495E;
-    padding-top: 1rem;
+.bookworm-footer {
+    background-color: var(--clr-primary);
+    height: 50px;
     margin-top: auto;
+    flex-shrink: 0;
 }
 
-.nav-item .nav-link {
-    color: white;
+#cookieConsent {
+    margin: 20px 0px;
 }
 
-body {
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
-    z-index: 1;
+.category-link {
+    text-decoration: none;
 }
 
-html {
-    height: 100%;
-}
-
-#quotesTable {
-    background-color: #34495E;
-    color: white;
-}
-
-    #quotesTable td:hover {
-        background: #1abc9c;
-    }
-
-#upButton {
-    position: fixed;
-    right: 2rem;
-    bottom: 5rem;
-    width: 3rem;
-    height: 3rem;
-    border-radius: 50%;
-    background-color: #1abc9c;
-    color: white;
-    border: none;
-    outline: none;
-    cursor: pointer;
-}
-
-    #upButton:hover {
-        color: #34495E;
-    }
-
-    #upButton:active {
-        background-color: #1abc9c;
-    }
-
-* {
-    box-sizing: border-box;
-}
-
-.container-wrapper {
-    background-color: #EDF0F9;
-}
-
-.starContainer {
-    height: 20vh;
-}
-
-.rating-wrapper {
-    align-self: center;
-    box-shadow: 7px 7px 25px rgba(198, 206, 237, .7), -7px -7px 35px rgba(255, 255, 255, .7), inset 0px 0px 4px rgba(255, 255, 255, .9), inset 7px 7px 15px rgba(198, 206, 237, .8);
-    border-radius: 5rem;
-    display: inline-flex;
-    direction: rtl !important;
-    padding: 1.5rem 2.5rem;
-    margin-left: auto;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-}
-
-.star-rating {
-    color: #E1E6F6;
-    cursor: pointer;
-    display: inline-flex;
-    font-size: 3rem;
-    padding: 1rem .6rem;
-    transition: color 0.5s;
-}
-
-svg {
-    -webkit-text-fill-color: transparent;
-    /*-webkit-filter: drop-shadow (4px 1px 6px rgba(198, 206, 237, 1));*/
-    filter: drop-shadow(5px 1px 3px rgba(198, 206, 237, 1));
-}
-
-
-
-.starInput {
-    height: 100%;
+.divider-custom {
+    margin: 1.25rem 0 1.5rem;
     width: 100%;
-    display: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-    .star-rating:hover,
-    .star-rating:hover ~ label,
-    .starInput:checked ~ label {
-        color: #34AC9E;
+    .divider-custom .divider-custom-line {
+        width: 100%;
+        max-width: 7rem;
+        height: 0.25rem;
+        background-color: #2c3e50;
+        border-radius: 1rem;
+        border-color: #2c3e50;
     }
 
-.bookTitle {
-    background-color: #34495E;
-    color: white;
-}
+        .divider-custom .divider-custom-line:first-child {
+            margin-right: 1rem;
+        }
 
-.addCommentBtn {
-    margin-bottom: 2rem;
-}
+        .divider-custom .divider-custom-line:last-child {
+            margin-left: 1rem;
+        }
 
-#favoriteBookCardBody {
-    background-color: #34495E;
-    color: white;
-}
-
-.commentContainer {
-    border: 1px solid rgba(16, 46, 46, 1);
-}
-
-.comment {
-    border: 1px solid rgba(16, 46, 46, 1);
-    background-color: #34495E;
-    float: left;
-    border-radius: 5px;
-    padding-left: 40px;
-    padding-right: 30px;
-    padding-top: 10px
-}
-
-    .comment h4,
-    .comment span,
-    .darker h4,
-    .darker span {
-        display: inline
+    .divider-custom .divider-custom-icon {
+        color: #2c3e50;
+        font-size: 2rem;
     }
 
-    .comment p,
-    .comment span,
-    .darker p,
-    .darker span {
-        color: white;
+    .divider-custom.divider-light .divider-custom-line {
+        background-color: #fff;
     }
 
-.commentIcon {
-    color: #1abc9c;
-    margin-left: 1rem;
+    .divider-custom.divider-light .divider-custom-icon {
+        color: #fff;
+    }
+
+
+a[class="form-link"] {
+    color: #34495E;
 }
 
-.commentIconPerson {
-    color: #1abc9c;
-}
-
-.rating {
-    display: inline-block;
-    /*width: 100%;*/
-    /*margin-top: 40px;
-    padding-top: 40px;*/
-    text-align: right;
-}
-
-.like,
-.dislike {
-    /*display: inline-block;*/
-    cursor: pointer;
-    /*margin: 1rem;*/
-}
-
-
-    .dislike:hover,
-    .like:hover {
+    a[class="form-link"]:hover {
         color: #1abc9c;
-        transition: all .2s ease-in-out;
-        transform: scale(1.1);
     }
 
-.liked {
-    color: #1abc9c;
+a[class="privacy-link"] {
+    color: white;
 }
 
+    a[class="privacy-link"]:hover {
+        color: #1abc9c;
+    }
 
+.form-control:focus {
+    /*border-color: var(--clr-secondary);*/
+    box-shadow: 0 0 0 0.2rem var(--clr-secondary);
+}
+
+.title-card {
+    background-color: var(--clr-primary);
+    color: white;
+}
+
+    .title-card :hover {
+        color: var(--clr-secondary);
+    }
+
+.card .card-header {
+    background-color: var(--clr-primary);
+    color: white;
+}
+
+.card .card-header:hover {
+    color: var(--clr-secondary);
+}
 
 input[type="radio"] {
     appearance: none;
-    margin: 10px 10px 10px 10px;
-    width: 24px;
-    height: 24px;
-    background: #eeeeee;
+    margin: 0.5rem;
+    width: 1.5rem;
+    height: 1.5rem;
+    background: var(--clr-primary);
     box-shadow: inset 0 0 0 .4em white, 0 0 0 .3em;
     border-radius: 50%;
     transition: .2s;
     cursor: pointer;
-    color: #363945;
     vertical-align: middle;
 }
 
     input[type="radio"]:hover, input[type="radio"]:checked {
-        background: #363945;
+        background: var(--clr-primary);
         box-shadow: inset 0 0 0 .6em white, 0 0 0 .3em;
     }
 
     input[type="radio"]:checked {
-        background: #56be8e;
+        background: var(--clr-secondary);
         box-shadow: inset 0 0 0 .4em white, 0 0 0 .3em #56be8e;
     }
 
     input[type="radio"]:focus {
         outline: 0;
     }
-
-
-
-
-
-.btn-google {
-    color: #fff;
-    background-color: #ea4335;
-    border-color: #fff;
-}
-
-    .btn-google:hover {
-        color: #fff;
-        background-color: #e12717;
-        border-color: #e6e6e6;
-    }
-
-    .btn-google:focus, .btn-google.focus {
-        color: #fff;
-        background-color: #e12717;
-        border-color: #e6e6e6;
-        box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.5);
-    }
-
-    .btn-google.disabled, .btn-google:disabled {
-        color: #fff;
-        background-color: #ea4335;
-        border-color: #fff;
-    }
-
-    .btn-google:not(:disabled):not(.disabled):active, .btn-google:not(:disabled):not(.disabled).active,
-    .show > .btn-google.dropdown-toggle {
-        color: #fff;
-        background-color: #d62516;
-        border-color: #dfdfdf;
-    }
-
-        .btn-google:not(:disabled):not(.disabled):active:focus, .btn-google:not(:disabled):not(.disabled).active:focus,
-        .show > .btn-google.dropdown-toggle:focus {
-            box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.5);
-        }
-
-
-
-
-.btn-facebook {
-    color: #fff;
-    background-color: #3b5998;
-    border-color: #fff;
-}
-
-    .btn-facebook:hover {
-        color: #fff;
-        background-color: #30497c;
-        border-color: #e6e6e6;
-    }
-
-    .btn-facebook:focus, .btn-facebook.focus {
-        color: #fff;
-        background-color: #30497c;
-        border-color: #e6e6e6;
-        box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.5);
-    }
-
-    .btn-facebook.disabled, .btn-facebook:disabled {
-        color: #fff;
-        background-color: #3b5998;
-        border-color: #fff;
-    }
-
-    .btn-facebook:not(:disabled):not(.disabled):active, .btn-facebook:not(:disabled):not(.disabled).active,
-    .show > .btn-facebook.dropdown-toggle {
-        color: #fff;
-        background-color: #2d4373;
-        border-color: #dfdfdf;
-    }
-
-        .btn-facebook:not(:disabled):not(.disabled):active:focus, .btn-facebook:not(:disabled):not(.disabled).active:focus,
-        .show > .btn-facebook.dropdown-toggle:focus {
-            box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.5);
-        }
-
-
-
-.responsive {
-    width: 100%;
-    height: auto;
-}
-
-.unapprovedQuotesBtn {
-    margin-bottom: 2rem;
-    margin-top: 2rem;
-}
